declarative/applications/console/base/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: console-env-header
spec:
  headers:
    customResponseHeaders:
      X-Environment: unknown
