declarative/applications/console/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console
spec:
  selector:
    app: console
  ports:
    - name: http
      port: 80
      targetPort: http
