declarative/applications/console/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: console
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`console.ecoma.io`)
      kind: Rule
      services:
        - name: console
          port: 80
      middlewares:
        - name: console-env-header
